# Comp345Project

./: .gitignore  README.md  dependencies.bat  dependencies.sh
NewHaven/: CMakeLists.txt  GBMapDriver.cpp  VGMapDriver.cpp  main.cpp
NewHaven/Exceptions/: BoardConfigurationNotLoaded.cpp  BoardConfigurationNotLoaded.h  InvalidConfigurationException.cpp  InvalidConfigurationException.h  UninitializedControllerException.cpp  UninitializedControllerException.h
NewHaven/config/: GBMapConfig_0.config  GBMapConfig_1.config  GBMapConfig_2.config  GBMapConfig_3.config  GBMapConfig_4.config  GBMapConfig_5.config  GBMapConfig_7.config  HarvestTiles.config  VGMapNum_0.config  VGMapNum_1.config  VGMapNum_2.config  VGMapNum_3.config  VGMapNum_5.config
NewHaven/source/:  GBMap.cpp  GBMap.cpp  GBMap.h  GB_Tile.h  VGMap.cpp  VGMap.h
NewHaven/src/: Calculations.cpp  Calculations.h  GBMap.cpp  GBMap.h  GBMapLoader.cpp  GBMapLoader.h  GameController.cpp  GameController.h  GameFlowPrinter.cpp  GameFlowPrinter.h  GameObservers.cpp  GameObservers.h  GameStatisticObserver.cpp  GameStatisticObserver.h  Part-3_5.cpp  Part-3_5.h  Part-3_6.cpp  Part-3_6.h  Player.cpp  Player.h  ResourceCalculator.cpp  ResourceCalculator.h  ResourceScore.cpp  ResourceScore.h  ResourceTracker.cpp  ResourceTracker.h  Resources.cpp  Resources.h  ScoreCalculator.cpp  ScoreCalculator.h  Setting.cpp  Setting.h  Square.cpp  Square.h  TurnObserver.cpp  TurnObserver.h  VGMap.cpp  VGMap.h  VGMapLoader.cpp  VGMapLoader.h
NewHaven/test/: CalculatorDriver.cpp  GBMapDriver.cpp  MapLoaderDriver.cpp  NewHavenMain.cpp  Part-3.cpp  Part-3_4-Test.cpp  Part-3_5-Test.cpp  Part-3_6-Test.cpp  Part1Driver.cpp  Part2Driver.cpp  PlayerDriver.cpp  PlayerTest.cpp  PrintClassTester.cpp  ResourceTrailCalculator.cpp  ResourcesDriver.cpp  ScoreDriver.cpp  TurnSequence.cpp  VGMapDriver.cpp  VGMapScoreComputation.cpp
